[project]
name = "py-pkgs-cookiecutter"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricki",email = "yizhuo.yang@student.uts.edu.au"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "2.2.2"
jupyterlab = "4.2.3"

